--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ REPORT_GAS=true
 INFURA_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ETHERSCAN_API_KEY=YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY
 SWAP_ROUTER_ADDRESS=0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D
+RESERVE_TOKEN_ADDRESS=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
+ADMIN_OWNER_ADDRESS=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
+NETWORK_SYMBOL=TEST
+NETWORK_NAME=Test Network
